--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
 computer.gif !text !filter !merge !diff
+Clips/*.mp4 filter=lfs diff=lfs merge=lfs -text
+Clips/*.gif filter=lfs diff=lfs merge=lfs -text
